@@ -24,6 +24,7 @@ This project receives help from these awesome contributors:
 - Waldir Pimenta
 - Mel Dafert
 - Andrii Kohut
+- Roland Walker
 
 Thanks
 ------
